Remove flex in header, section, footer and enable margin: auto, add kakaomap API. - Fix outline when subscribe form input is active. - Set map coords to assignment. - Add padding to framer for spacing.

--- a/landing.css
+++ b/landing.css
@@ -91,9 +91,10 @@
 }
 
 .div-framer {
-    max-width: 85%;
-    margin: 20px 0;
-    flex: 0 1 1000px;
+    width: 1300px;
+    max-width: 70%;
+    margin: auto;
+    padding: 20px 0;
 }
 
 .article-popout {
@@ -118,11 +119,17 @@
     border-radius: 32px;
     padding: 5px 10px;
     width: 50%;
+    min-width: 300px;
 }
 
 .form-subscribe > input {
     border-width: 0;
     flex: 1 1 auto;
+    min-width: 100px;
+}
+
+.form-subscribe > input:focus {
+    outline: 0;
 }
 
 .form-subscribe > label {
@@ -131,12 +138,11 @@
     padding: 0 12px;
 }
 
+/*
 section, header, footer {
-    text-align: center;
-    justify-content: center;
     display: flex;
     flex-direction: row;
-}
+}*/
 
 .h2-main {
     font: 48px Arial, sans-serif;
